--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.TaskDetailsActivity"></activity>
+        <activity android:name=".ui.TaskDetailsActivity"
+           android:windowSoftInputMode="stateHidden"></activity>
     </application>
 
 </manifest>
