--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.TaskDetailsActivity"
-           android:windowSoftInputMode="stateHidden"></activity>
+        <activity
+            android:name=".ui.TaskDetailsActivity"
+            android:windowSoftInputMode="stateHidden" />
+        <activity android:name=".ui.CreateTaskActivity"></activity>
     </application>
 
 </manifest>
