--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile project(":photogallery")
+    compile project(":timeselector")
 
 }
