--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -50,5 +54,9 @@ dependencies {
 
     compile project(":photogallery")
     compile project(":timeselector")
+
+    compile 'com.daimajia.swipelayout:library:1.2.0@aar'
+    compile 'cn.pedant.sweetalert:library:1.3'
+
 
 }
