--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.gk.erp012">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
@@ -19,7 +20,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/ErpTheme">
+        android:theme="@style/ErpTheme"
+        tools:replace="android:icon"
+        >
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/title_activity_main"
